# cfd

./: README.md
cxx/: .gitignore  CMakeLists.txt  Makefile  README.md
cxx/src/: CMakeLists.txt
cxx/src/1_1d_linear_convection/: Allclean  Allrun  CMakeLists.txt  main.cpp
cxx/src/2_1d_nonlinear_convection/: Allrun  CMakeLists.txt  main.cpp
cxx/src/3_1d_diffusion/: Allrun  CMakeLists.txt  main.cpp
cxx/src/4_1d_burgers/: Allclean  Allrun  CMakeLists.txt  animate1d.py  main.cpp  plotU0.py
cxx/src/5_2d_linear_convection/: .gitignore  Allrun  CMakeLists.txt  README.md  main.cpp
cxx/src/6_2d_nonlinear_convection/: Allrun  CMakeLists.txt  Makefile  animate2d.py  main.cpp
cxx/utils/: CMakeLists.txt  io.cpp  linspace.cpp
cxx/utils/include/utils/: io.hpp  linspace.hpp  mathematicalConstants.hpp
notebooks/: .gitignore  README.md
notebooks/01_1d_linear_convection/: 1d_linear_convection.ipynb
notebooks/03_1d_diffusion/: 1d_diffusion.ipynb
notebooks/08_2d_burgers/: 2d_burgers.ipynb
notebooks/1_1d_linear_convection/: 1d_linear_convection.ipynb
notebooks/2_1d_nonlinear_convection/: 1d_nonlinear_convection.ipynb
notebooks/3_1d_diffusion/: 1d_diffusion.ipynb
notebooks/4_1d_burgers/: 1d_burgers.ipynb
notebooks/5_2d_linear_convection/: 2d_linear_convection.ipynb
notebooks/7_2d_diffusion/: 2d_diffusion.ipynb
notebooks/8_2d_burgers/: 2d_burgers.ipynb
notebooks/9_2d_laplace/: 2d_laplace.ipynb
